--- a/css/main.css
+++ b/css/main.css
@@ -2750,15 +2750,16 @@ html.no-csstransitions .home-content__main {
 
 .clients__slide {
     display: block;
-    opacity: .55;
+    opacity: 1;
     padding: 1.5rem 2.8rem;
     -webkit-transition: opacity 0.5s ease-in-out;
     transition: opacity 0.5s ease-in-out;
+    cursor:default;
 }
 
-.clients__slide:hover, .clients__slide:focus {
+/* .clients__slide:hover, .clients__slide:focus {
     opacity: 1;
-}
+} */
 
 
 /* ------------------------------------------------------------------- 
